fix login/signup pages on mobile

--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -34,7 +34,7 @@ section {
 
 }
 
-.sm-column {
+.sm-div {
   @include media($mobile) {
     @include shift(4);
   }
